[package]
name = "chinviter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
spinners = "4.1.0"
rpassword = "7.0"

reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"

csv = "1.1.6"
